--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <span class="text-primary">Kothari</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Undergraduate Student ·
+                        Incoming Masters Student ·
                         <a href="mailto:akash.kothari@mail.utoronto.ca">akash.kothari@mail.utoronto.ca*</a>
                     </div>
-                    <p class="lead mb-5">I am a fourth-year undergraduate student at the University of Toronto, St. George Campus. I am double majoring in Immunology and Nutritional Sciences. I am currently pursuing a double thesis in the Translational Medicine Program in both immunology/allergy and neonatal nutrition at the Hospital for Sick Children.</p>
+                    <p class="lead mb-5">I am a recent HBSc graduate at the University of Toronto, having pursued a double thesis in immunology/allergy and neonatal nutrition at the Hospital for Sick Children. I will be a Lunenfeld Scholar for the summer, before pursuing a Master of Science at the Institute of Medical Science, Temerty Faculty of Medicine in the fall of 2021.</p>
                     <p>Research Profiles</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://scholar.google.com/citations?user=U02JdQgAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar"></i></a>
@@ -66,11 +66,15 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/akash-kothari/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://twitter.com/akash__kothari" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/picsbyakash/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                    </br>
+                    <p>Curriculum Vitae</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="assets/img/ccv.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
                     <div>
                     </br>
                     </br>
-                    </br>
-                    <p>*If you'd like to chat or see a CV, feel free to reach out!</p>
+                    <p>*If you'd like to chat, feel free to reach out! I am passionate about research and discovery and love to meet new people!</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -81,16 +85,29 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Toronto</h3>
+                            <div class="subheading mb-3">Master of Science</div>
+                            <div>Institute of Medical Science, Temerty Faculty of Medicine</div>
+                            <p>MSc Candidate at The Hospital for Sick Children</p>
+                            <p>Thesis Supervisors: Thomas Eiwegger, MD and Theo Moraes MD, PhD</p>
+                            <ul>
+                                <li>Allergen specific IgG and IgA in breastmilk and the development of allergies: The CHILD Cohort Study.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of Toronto</h3>
                             <div class="subheading mb-3">Honours Bachelor of Science</div>
                             <div>Immunology and Nutritional Sciences</div>
-                            <p>Anticipated graduation with High Distinction (cGPA > 3.5)</p>
-                            <p> (1) Thesis Supervisor: Thomas Eiwegger, MD </p>
+                            <p>Graduated with High Distinction (cGPA > 3.5)</p>
+                            <p>(1) Thesis Supervisor: Thomas Eiwegger, MD </p>
                             <ul>
-                                <li>Investigation of the impact of Omalizumab on transplacental transport of peanut allergen </li>
+                                <li>Omalizumab mediates allergen-specific responses induced through transplacental immune complexes.</li>
                             </ul>
-                            <p> (2) Thesis Supervisor: Deborah O'Connor, PhD, RD </p>
+                            <p>(2) Thesis Supervisor: Deborah O'Connor, PhD, RD </p>
                             <ul>
-                                <li>The effect of Holder pasteurization and High Hydrostatic Pressure Processing on the antiviral properties of human milk </li>
+                                <li>The effect of thermal and non-thermal pasteurization methods on the antiviral properties of human milk.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2017 - June 2021</span></div>
@@ -104,9 +121,17 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Lunenfeld Summer Student</h3>
+                            <div class="subheading mb-3">The Hospital for Sick Children | O'Connor Lab</div>
+                            <p>Worked with a graduate student to examine anti-CMV and anti-HAV activity before and after pasteurization of human donor milk, funded by a Lunenfeld Studentship.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - August 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Summer Research Student</h3>
                             <div class="subheading mb-3">The Hospital for Sick Children | Eiwegger Lab</div>
-                            <p>A work-from-home (due to COVID-19) computational research project in B-cell immunology using bioinformatics to analyze epitope mapping of peanut allergens, as part of the Immunology Summer Student Research Program.</p>
+                            <p>A work-from-home (due to COVID-19) computational research project in B-cell immunology using bioinformatics to analyze epitope mapping of peanut allergens, funded by a Milne Research Award.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2020 - August 2020</span></div>
                     </div>
@@ -180,7 +205,7 @@
                             </br>
                             </br>
                             </br>
-                            <p>*Proof of validation upon request.</p>
+                            <p>*See CV for more details.</p>
                         </ul>
                         </div>
                     </div>
@@ -204,9 +229,15 @@
                     <h2 class="mb-5">Scholarships and Awards</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">2021</h3>
+                            <div class="subheading mb-3">University of Toronto</div>
+                            <p>Lunenfeld Studentship ($2000)</p>
+                            <p>Ontario Remembrance Scholraship ($10 000)</p>
+                            <p>Dean's List Scholar</p>
+                            </br>
                             <h3 class="mb-0">2020</h3>
                             <div class="subheading mb-3">University of Toronto</div>
-                            <p>Tuohy Award declined ($9600)</p>
+                            <p>Tuohy Award cancelled ($9600)</p>
                             <p>UROP Award declined ($4000)</p>
                             <p>Milne Research Award ($5000)</p>
                             <p>The Regents' Scholarship ($1000)</p>
