--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <h3 class="mb-0">2021</h3>
                             <div class="subheading mb-3">University of Toronto</div>
                             <p>Lunenfeld Studentship ($2000)</p>
-                            <p>Ontario Remembrance Scholraship ($10 000)</p>
+                            <p>Ontario Remembrance Scholarship ($10 000)</p>
                             <p>Dean's List Scholar</p>
                             </br>
                             <h3 class="mb-0">2020</h3>
